fixed overflow problem

--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ html {
 * {
     margin: 0;
     padding: 0;
+    border: red solid 1px;
+    overflow: hidden;
 }
 
 h3 {
